/**
 * Copyright 2020 Open Reaction Database Project Authors
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

goog.provide('ord.enums');

// Proto enums are referenced by reflection from "data-proto" HTML attributes.
goog.require('proto.ord.Boolean.BooleanValue');
goog.require('proto.ord.Compound.ReactionRole.ReactionRoleType');
goog.require('proto.ord.CompoundIdentifier.IdentifierType');
goog.require('proto.ord.CompoundPreparation.PreparationType');
goog.require('proto.ord.ElectrochemistryConditions.ElectrochemistryType.ElectrochemistryTypeEnum');
goog.require('proto.ord.FlowConditions.FlowType.FlowTypeEnum');
goog.require('proto.ord.IlluminationConditions.IlluminationType.IlluminationTypeEnum');
goog.require('proto.ord.PressureConditions.Atmosphere.AtmosphereType');
goog.require('proto.ord.PressureConditions.Measurement.MeasurementType');
goog.require('proto.ord.PressureConditions.PressureControl.PressureControlType');
goog.require('proto.ord.ReactionIdentifier.IdentifierType');
goog.require('proto.ord.ReactionInput.AdditionSpeed.AdditionSpeedType');
goog.require('proto.ord.StirringConditions.StirringMethod.StirringMethodType');
goog.require('proto.ord.StirringConditions.StirringRate.StirringRateType');
goog.require('proto.ord.TemperatureConditions.Measurement.MeasurementType');
goog.require('proto.ord.TemperatureConditions.TemperatureControl.TemperatureControlType');
goog.require('proto.ord.VesselAttachment.VesselAttachmentType');
goog.require('proto.ord.VesselMaterial.VesselMaterialType');
goog.require('proto.ord.VesselPreparation.VesselPreparationType');
goog.require('proto.ord.VesselType.VesselTypeEnum');
